# VoxiType

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SESSION.md  floating.html  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: offline-whisper-cpp.md
src/: App.tsx  floating.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: active_window.rs  commands.rs  crypto.rs  error.rs  events.rs  lib.rs  logging.rs  main.rs  overlay.rs  sound.rs  updater.rs  util.rs
src-tauri/src/audio/: capture.rs  device.rs  mod.rs  resampler.rs  ring_buffer.rs
src-tauri/src/commands/: dictionary.rs  history.rs  misc.rs  mod.rs  per_app.rs  recording.rs  runtime.rs  settings.rs  snippets.rs  stats.rs
src-tauri/src/hotkey/: config.rs  mod.rs
src-tauri/src/injection/: clipboard.rs  command.rs  hybrid.rs  keystroke.rs  mod.rs
src-tauri/src/llm/: factory.rs  fallback.rs  groq_llm.rs  mod.rs  ollama.rs  prompts.rs  rule_based.rs  types.rs
src-tauri/src/pipeline/: batch.rs  mod.rs  state_machine.rs
src-tauri/src/storage/: db.rs  dictionary.rs  history.rs  mod.rs  per_app_modes.rs  schema.sql  settings.rs  snippets.rs  stats.rs
src-tauri/src/stt/: factory.rs  groq_stt.rs  mod.rs  types.rs  whisper_cpp.rs
src-tauri/src/tray/: menu.rs  mod.rs
src-tauri/src/vad/: config.rs  energy.rs  mod.rs  silero.rs
src/components/common/: FloatingDock.tsx  HomeView.tsx  PanelHeader.tsx  Sidebar.tsx  TopBar.tsx  WpmHalfRing.tsx
src/components/dictionary/: DictionaryPanel.tsx  SnippetsPanel.tsx
src/hooks/: useDebouncedApiKey.ts  useTauriEvents.ts
src/lib/: debounce.ts  i18n.ts  tauri.ts
src/stores/: appStore.ts  dictionaryStore.ts  historyStore.ts  settingsStore.ts  snippetStore.ts  statsStore.ts
src/styles/: index.css
src/types/: app.ts  events.ts
(+24 files in other folders)
