[package]
name = "voxitype"
version = "0.3.1"
description = "Free & open-source voice-to-text for all applications"
authors = ["VoxiType Contributors"]
edition = "2021"
rust-version = "1.85"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voxitype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri core + plugins ---
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Async runtime ---
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
async-trait = "0.1"

# --- Audio pipeline ---
cpal = "0.15"
rubato = "0.16"

# --- HTTP client (Ollama, Groq) ---
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
open = "5"

# --- Text injection ---
enigo = "0.2"
arboard = "3.4"

# --- Storage ---
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

# --- API key encryption (AES-256-GCM at rest) ---
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# --- Windows-only: active window / process detection for per-app modes ---
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
] }

[features]
default = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
